--- a/Alquiler2Pesoss/appsettings.json
+++ b/Alquiler2Pesoss/appsettings.json
@@ -1,16 +1,17 @@
 {
 
-
   "ConnectionStrings": {
 
-    "DefaultConnection": "Data Source=DESKTOP-GDSL67D;Initial Catalog=Alquiler;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "conn": "Server=(localdb)\\MSSQLLocalDB;Database=Alquiler;Integrated Security=True"
+
   },
 
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
