--- a/Alquiler2Pesoss/Alquiler2Pesoss.csproj
+++ b/Alquiler2Pesoss/Alquiler2Pesoss.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
