Agregado libreria de clases llamado Blazor.Crud.Model Agregado Componente de Razon con nombre FilmDetails Agregado Libreria de clases llamado BlazorCRUD.Data.Dapper Nueva Carpeta "interfaces" Nueva Carpeta "servicios"

--- a/Alquiler2Pesoss/Alquiler2Pesoss.csproj
+++ b/Alquiler2Pesoss/Alquiler2Pesoss.csproj
@@ -18,6 +18,13 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Servicios\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorCRUD.Data.Dapper\BlazorCRUD.Data.Dapper.csproj" />
+    <ProjectReference Include="..\BlazorCRUD.Model\BlazorCRUD.Model.csproj" />
   </ItemGroup>
 
 </Project>
