--- a/Alquiler2Pesoss/appsettings.json
+++ b/Alquiler2Pesoss/appsettings.json
@@ -2,7 +2,7 @@
 
   "ConnectionStrings": {
 
-    "conn": "Server=(localdb)\\MSSQLLocalDB;Database=Alquiler;Integrated Security=True"
+    "conn": "Server=(localdb)\\MSSQLLocalDB;Database=Alquiler;Integrated Security=False"
       
   },
 
